@@ -53,16 +53,20 @@
   </ciManagement>
 
   <properties>
+    <!-- JBoss Parent -->
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+
     <!-- Arquillian -->
     <version.servlet_api>3.0.1</version.servlet_api>
     <version.arquillian_core>1.8.0.Final</version.arquillian_core>
-    <version.arquillian_drone>3.0.0-alpha.7</version.arquillian_drone>
+    <version.arquillian_drone>3.0.0-alpha.8</version.arquillian_drone>
     <version.arquillian_jacoco>1.1.0</version.arquillian_jacoco>
 
     <version.littleproxy>2.0.22</version.littleproxy>
     <!--Littleproxy logging is done through SL4J and thus Log4j: -->
     <version.log4j>2.22.0</version.log4j>
-    <version.javassist>3.29.2-GA</version.javassist>
+    <version.javassist>3.30.2-GA</version.javassist>
     <version.httpcore>5.2.3</version.httpcore>
 
     <!-- Tests -->
@@ -71,15 +75,17 @@
     <version.jacoco>0.8.11</version.jacoco>
     <version.shrinkwrap.resolver>3.2.1</version.shrinkwrap.resolver>
     <version.jboss_spec>3.0.3.Final</version.jboss_spec>
+    <surefire.security.manager/>
+    <modular.jdk.args/>
 
     <!-- Container Versions -->
     <version.tomee>8.0.14</version.tomee>
     <version.glassfish>5.1.0</version.glassfish>
     <version.tomcat6>6.0.35</version.tomcat6>
     <version.tomcat7>7.0.26</version.tomcat7>
+    <!-- Don't upgrade beyond WildFly 26 for EE 8, WF 27 and newer is Jakarta EE 10 -->
     <version.wildfly>26.1.3.Final</version.wildfly>
-    <!--Don't upgrade beyond 3.0.1.Final. 4.0.0.Alpha6 fails, and 5.0.0.Alpha6 is built with Java 11 -->
-    <version.wildfly.arquillian.container>3.0.1.Final</version.wildfly.arquillian.container>
+    <version.wildfly.arquillian.container>5.0.0.Final</version.wildfly.arquillian.container>
 
     <additionalparam>-Xdoclint:none</additionalparam>
   </properties>
@@ -114,6 +120,56 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.3.0</version>
+          <configuration>
+            <argLine>${surefire.security.manager} ${modular.jdk.args}</argLine>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
+
+  <profiles>
+    <profile>
+      <id>jdk-modular</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties>
+        <modular.jdk.args>
+          --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+          --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+          --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED
+          --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED
+          --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED
+          --add-opens=java.base/java.io=ALL-UNNAMED
+          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens=java.base/java.net=ALL-UNNAMED
+          --add-opens=java.base/java.security=ALL-UNNAMED
+          --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens=java.management/javax.management=ALL-UNNAMED
+          --add-opens=java.naming/javax.naming=ALL-UNNAMED
+        </modular.jdk.args>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk23-security-manager</id>
+      <activation>
+        <jdk>[23,)</jdk>
+      </activation>
+      <properties>
+        <surefire.security.manager>
+          -Djava.security.manager=allow
+        </surefire.security.manager>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
